add api change status